Avoid horizontal scrollbar on table when there is a long title

--- a/src/scss/components/_tables.scss
+++ b/src/scss/components/_tables.scss
@@ -36,6 +36,11 @@
 			border-right: 1px solid $border-secondary;
 			font-weight: 600;
 			text-align: left;
+
+			&[scope="row"] {
+				min-width: 35rem;
+				white-space: normal;
+			}
 		}
 
 		td {
